--- a/03_data-analysis.Rmd
+++ b/03_data-analysis.Rmd
@@ -200,6 +200,59 @@ corrplot(cor_matrix,
          title = "Correlation Plot"
 )
 
+
+```
+
+# wp
+```{r}
+# summary of WP and P50 samples sizes
+P50_summary_table <- trait_data1 %>%
+  filter(!is.na(P50_MPa_2024) | !is.na(P50_MPa_2025)) %>% 
+  group_by(size, species, elevation, microsite) %>%
+  summarise(n_individuals = n(), .groups = "drop")
+
+WP_summary_table <- trait_data1 %>%
+  filter(!is.na(predawn_MPa_2024) | !is.na(predawn_MPa_2025)) %>% 
+  group_by(size, species, plot) %>%
+  summarise(n_individuals = n(), .groups = "drop")
+
+# are water potentials and P50s different between years
+# compare trends between years for measured P50 values
+ggplot() +
+  geom_point(data = trait_data1, 
+             aes(x = diameter_complete, y = P50_MPa_2024, color = species, shape = "2024"), 
+             size = 3, alpha = 1) +
+  geom_smooth(data = trait_data1, 
+              aes(x = diameter_complete, y = P50_MPa_2024, color = species, linetype = "2024"), 
+              method = "lm", se = TRUE, alpha = 0.3) +
+  geom_point(data = trait_data1, 
+             aes(x = diameter_complete, y = P50_MPa_2025, color = species, shape = "2025"), 
+             size = 3, alpha = 1) +
+  geom_smooth(data = trait_data1, 
+              aes(x = diameter_complete, y = P50_MPa_2025, color = species, linetype = "2025"), 
+              method = "lm", se = TRUE, alpha = 0.3) +
+  scale_color_manual(values = c(
+    "ABCO" = "mediumturquoise",
+    "PIPO" = "lawngreen",
+    "ABMA" = "maroon3",
+    "PILA" = "lightslateblue"
+  )) +
+  scale_shape_manual(name = "Year", values = c("2024" = 16, "2025" = 17)) +
+  scale_linetype_manual(name = "Year", values = c("2024" = "solid", "2025" = "dashed")) +
+  labs(
+    x = "Basal diameter (cm)",
+    y = "P50 (-MPa)",
+    color = "Species"
+  ) +
+  theme(
+    panel.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank(),
+    axis.line = element_line(color = "black"),
+    legend.position = "top"
+  )
+
 # There is a statistically significant difference between 2024 and 2025 predawn and midday water potential means. On average, predawn WP is higher (more negative) in 2024 and midday is 
 t.test(predawn_MPa_combined ~ year, data = trait_data1, paired = FALSE)
 
